# ToolFinder

./: .gitignore  .mcp.json  ARCHITECTURE_REPORT.md  README.md  agent_bridge.py  evaluate_zero_shot.py  local_copilot_chat.py  mcp_router.py  mcp_routing_dataset.csv  mcp_routing_dataset_v2.csv  prove_scalability.py  pyproject.toml  requirements.txt  routing.ipynb
academic_research/: Dataset_Analysis.ipynb  agent_bridge.py  evaluate_zero_shot.py  local_copilot_chat.py  routing.ipynb
examples/: eval_toolfinder.py  eval_toolfinder_output.txt  eval_toolfinder_run2.txt  eval_toolfinder_run3.txt  eval_toolfinder_run4.txt  prove_scalability.py  verify_react_agent.py
examples/langgraph_integration/: baseline_agent.py  benchmark_agent.py
examples/langgraph_integration/sandbox/: input.txt
langgraph_integration/: baseline_agent.py  benchmark_agent.py
scalable_router/: __init__.py  autonomous_agent.py  dynamic_faiss_router.py  mcp_adapter.py  utils.py  verify_discovery.py  verify_execution.py  verify_multi_server.py  verify_react_agent.py
toolfinder/: __init__.py  autonomous_agent.py  dynamic_faiss_router.py  mcp_adapter.py
